deployments/login-ui/base/external-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-ui-external-name
  namespace: auth
spec:
  type: ExternalName
  externalName: vaynerakawalo.github.io
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
