deployments/login-ui/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-ui
  namespace: auth
spec:
  selector:
    app: login-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
