deployments/login-ui/base/login-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: login-https
  namespace: auth
spec:
  parentRefs:
    - name: envoy-gateway
      sectionName: https
      kind: Gateway
      namespace: infra

  hostnames:
    - auth.blamedevs.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: URLRewrite
          urlRewrite:
            hostname: "vaynerakawalo.github.io"
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /login-ui

      backendRefs:
        - name: login-ui-external-name
          namespace: auth
          port: 443
